--- a/css/style.scss
+++ b/css/style.scss
@@ -16,6 +16,10 @@
   }
 }
 
+@mixin hide(){
+  display: none;
+}
+
 
 html, body{
   height: 100%;
@@ -36,7 +40,7 @@ Scroll events don't trigger on vertical scrolling if overflow-x is applied to th
 Wrapping all content to prevent horizontal scrolling. 
 */
 .wrapper{
-  overflow-x: hidden;
+/*  overflow-x: hidden;*/
   
   /* Use font-size to scale the scenes. They are in ems */
   font-size: 100%;
@@ -134,6 +138,7 @@ Wrapping all content to prevent horizontal scrolling.
    
    /* cat falling 2 */
    .bumper-cat-shape2{
+          @include hide;
      float: right;
      width: 2em;
      height: 2em;
@@ -141,11 +146,14 @@ Wrapping all content to prevent horizontal scrolling.
    }
    
    .cat-shape2{
-     float: right;
-     font-size: 70%;;
+          @include hide;
+     float: right; 
+     /* TODO: use calc() with percentages because WebKit doesn't go below 56% (9px) */
+     font-size: 8px;
      outline: 1px solid red;
      
      & + p{
+            @include hide;
        padding-top: 3em;
        margin-bottom: 3em;
        color: red;
@@ -154,19 +162,22 @@ Wrapping all content to prevent horizontal scrolling.
    
    /* cat falling 3 */
    .bumper-cat-shape3{
+          @include hide;
      float: left;
-     width: 2em;
+     width: 12em;
      height: 2em;
      background: green;
    }
    
    .cat-shape3{
+          @include hide;
      float: left;
      -webkit-shape-margin: 1em;
-     font-size: 70%;
+     font-size: 8px;
      outline: 1px solid green;
      
      & + p{
+            @include hide;
        margin-bottom: 3em;
        color: green;
      }
@@ -174,23 +185,92 @@ Wrapping all content to prevent horizontal scrolling.
    
    /* cat falling 4 */
    .bumper-cat-shape4{
+    @include hide;
      float: left;
-     width: 2em;
+     width: 10em;
      height: 2em;
      background: orange;
    }
    
    .cat-shape4{
+     @include hide;
      float: left;
      -webkit-shape-margin: 1em;
-     font-size: 70%;
+     font-size: 8px;
      outline: 1px solid orange;
      
      & + p{
+            @include hide;
        margin-bottom: 3em;
        color: orange;
      }
    }
+   
+   /* cat falling 5 */
+   .bumper-cat-shape5{
+     float: left;
+     width: 2em;
+     height: 2em;
+     background: purple;
+   }
+   
+   .cat-shape5{
+     float: left;
+     -webkit-shape-margin: 1em;
+     font-size: 8px;
+     outline: 1px solid purple;
+     
+     & + p{
+       margin-bottom: 3em;
+       color: purple;
+     }
+   }
+
+   $cat-color: magenta;
+   /* cat falling 6 */
+   .bumper-cat-shape6{
+     float: left;
+     width: 2em;
+     height: 2em;
+     background: $cat-color;
+   }
+   
+   .cat-shape6{
+     float: left;
+     -webkit-shape-margin: 1em;
+     font-size: 8px;
+     outline: 1px solid $cat-color;
+     
+     & + p{
+       margin-bottom: 3em;
+       color: $cat-color;
+     }
+   }
+
+   $cat-color: green;
+   /* cat falling 6 */
+   .bumper-cat-shape-walking{
+      @include hide;
+     float: left;
+     width: 2em;
+     height: 2em;
+     background: $cat-color;
+   }
+   
+   .cat-shape-walking{
+           @include hide;
+     float: left;
+     -webkit-shape-margin: 1em;
+     font-size: 7px;
+     outline: 1px solid $cat-color;
+     
+     & + p{
+             @include hide;
+       margin-bottom: 3em;
+       color: $cat-color;
+     }
+   }
+   
   
 }
 
