--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,11 @@ body {
 p {
   margin: 0; }
 
+.content p {
+  /* Keeps font-size consistent with root. */
+  font-size: 1rem;
+  font-family: merriweather, serif; }
+
 /* 
 Scroll events don't trigger on vertical scrolling if overflow-x is applied to the body.
 Wrapping all content to prevent horizontal scrolling. 
@@ -340,9 +345,6 @@ Wrapping all content to prevent horizontal scrolling.
     margin-left: 37.5em;
     padding-top: 11.56em;
     -webkit-shape-inside: polygon(0em 0em, 33em -0.06em, 33.13em 23.75em, 30em 23.88em, 28em 25.88em, 28em 28.75em, 32.88em 33.00em, 31.38em 37.50em, 27.75em 37.88em, 23.31em 42.56em, 22.56em 45.88em, 24.5em 46.81em, 21.19em 49.56em, 24em 53.13em, 27em 53.13em, 28.81em 61.13em, 26.31em 74.88em, 0em 75.00em, 0em 65.94em, 2em 58.00em, 11.94em 53.50em, 11.25em 49.69em, 8.75em 47.25em, 9.44em 44.94em, 1.81em 43.75em, 0em 40.00em, 6.38em 40.00em, 12.44em 38.50em, 15.75em 35.25em, 9.88em 35.25em, 8.69em 33.50em, 5.63em 31.75em, 10.75em 30.19em, 5.44em 28.75em, 3.44em 25.19em, 7.25em 23.75em, 4em 23.44em, 1em 20.63em, 2.88em 18.50em, 1.25em 15.63em, 5.63em 11.69em, 6.13em 6.94em, 3.25em 2.44em); }
-    #scene1 .content p {
-      /* Keeps font-size consistent with root. */
-      font-size: 1rem; }
   #scene1 .overlay {
     position: absolute;
     width: 100%;
@@ -386,65 +388,56 @@ Wrapping all content to prevent horizontal scrolling.
     -webkit-shape-padding: 0.99em; }
   #scene2_1 .bumper-cat-shape1 {
     float: left;
-    width: 26em;
+    width: 29em;
     height: 2em;
     background: blue; }
   #scene2_1 .cat-shape1 {
     float: left;
     -webkit-shape-margin: 1em;
-    font-size: 70%;
+    font-size: 8px;
     outline: 1px solid blue; }
     #scene2_1 .cat-shape1 + p {
       padding-top: 3em;
       margin-bottom: 3em;
       color: blue; }
   #scene2_1 .bumper-cat-shape2 {
-    display: none;
     float: right;
     width: 2em;
     height: 2em;
     background: red; }
   #scene2_1 .cat-shape2 {
-    display: none;
     float: right;
     /* TODO: use calc() with percentages because WebKit doesn't go below 56% (9px) */
-    font-size: 8px;
+    font-size: 7px;
     outline: 1px solid red; }
     #scene2_1 .cat-shape2 + p {
-      display: none;
-      padding-top: 3em;
       margin-bottom: 3em;
       color: red; }
   #scene2_1 .bumper-cat-shape3 {
-    display: none;
     float: left;
-    width: 12em;
+    width: 15em;
     height: 2em;
     background: green; }
   #scene2_1 .cat-shape3 {
-    display: none;
     float: left;
     -webkit-shape-margin: 1em;
-    font-size: 8px;
+    font-size: 7px;
     outline: 1px solid green; }
     #scene2_1 .cat-shape3 + p {
-      display: none;
       margin-bottom: 3em;
       color: green; }
   #scene2_1 .bumper-cat-shape4 {
-    display: none;
+    clear: left;
     float: left;
     width: 10em;
     height: 2em;
     background: orange; }
   #scene2_1 .cat-shape4 {
-    display: none;
     float: left;
     -webkit-shape-margin: 1em;
-    font-size: 8px;
+    font-size: 7px;
     outline: 1px solid orange; }
     #scene2_1 .cat-shape4 + p {
-      display: none;
       margin-bottom: 3em;
       color: orange; }
   #scene2_1 .bumper-cat-shape5 {
@@ -455,7 +448,7 @@ Wrapping all content to prevent horizontal scrolling.
   #scene2_1 .cat-shape5 {
     float: left;
     -webkit-shape-margin: 1em;
-    font-size: 8px;
+    font-size: 6px;
     outline: 1px solid purple; }
     #scene2_1 .cat-shape5 + p {
       margin-bottom: 3em;
@@ -463,30 +456,24 @@ Wrapping all content to prevent horizontal scrolling.
   #scene2_1 .bumper-cat-shape6 {
     float: left;
     width: 2em;
-    height: 2em;
-    background: fuchsia; }
+    height: 2em; }
   #scene2_1 .cat-shape6 {
     float: left;
     -webkit-shape-margin: 1em;
-    font-size: 8px;
-    outline: 1px solid fuchsia; }
+    font-size: 7px; }
     #scene2_1 .cat-shape6 + p {
-      margin-bottom: 3em;
-      color: fuchsia; }
+      margin-bottom: 3em; }
   #scene2_1 .bumper-cat-shape-walking {
-    display: none;
     float: left;
     width: 2em;
     height: 2em;
     background: #008000; }
   #scene2_1 .cat-shape-walking {
-    display: none;
     float: left;
     -webkit-shape-margin: 1em;
     font-size: 7px;
     outline: 1px solid #008000; }
     #scene2_1 .cat-shape-walking + p {
-      display: none;
       margin-bottom: 3em;
       color: #008000; }
 
