--- a/css/style.scss
+++ b/css/style.scss
@@ -51,7 +51,6 @@ Wrapping all content to prevent horizontal scrolling.
 }
 
 #scene1{
-  display: none;
   background: -webkit-linear-gradient(top, rgba(0,0,0,0) 90%, rgba(0,0,0,0.9)) bottom, url(../images/bg_scn1.jpg) left top;
   background-size: 100%;
   
@@ -97,7 +96,6 @@ Wrapping all content to prevent horizontal scrolling.
 
 
 #scene2_1{
-  display: none;
   background: url(../images/bg_scn2_part_r1_c1_s1.jpg) 0 top;
   background-size: 100%;
   width: 109em;
@@ -280,6 +278,8 @@ Wrapping all content to prevent horizontal scrolling.
   }
   
   .act2{
+    
+    /* temporarily hidden while working */
     display: none;
     background: rgba(0,160,0,0.1);
     width: 30em;
