--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,7 @@ Wrapping all content to prevent horizontal scrolling.
   background: black; }
 
 #scene1 {
+  display: none;
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0.9)) bottom, url(../images/bg_scn1.jpg) left top;
   background-size: 100%;
   /* 
@@ -360,6 +361,7 @@ Wrapping all content to prevent horizontal scrolling.
     -webkit-transform: scale(8); }
 
 #scene2_1 {
+  display: none;
   background: url(../images/bg_scn2_part_r1_c1_s1.jpg) 0 top;
   background-size: 100%;
   width: 109em;
@@ -468,7 +470,8 @@ Wrapping all content to prevent horizontal scrolling.
   background-size: 100%;
   width: 278.75em;
   height: 91.25em;
-  border-top: 1px solid yellow; }
+  border-top: 1px solid yellow;
+  left: -1500px; }
   #scene2_2 .content {
     width: 278.75em;
     height: 80em;
@@ -479,7 +482,7 @@ Wrapping all content to prevent horizontal scrolling.
   #scene2_2 .act1 {
     background: rgba(0, 240, 0, 0.1);
     width: 55em;
-    height: 80em;
+    height: 50em;
     margin-left: 16em; }
   #scene2_2 .act2 {
     /* temporarily hidden while working */
@@ -494,8 +497,9 @@ Wrapping all content to prevent horizontal scrolling.
       right: 0;
       -webkit-transform: rotate(7deg); }
   #scene2_2 .act3 {
-    /*    background: rgba(0,160,0,0.1);*/
-    width: 40em;
+    /* temporary hidden while working */
+    display: none;
+    width: 50em;
     height: 45em;
     position: relative; }
     #scene2_2 .act3 .cat-paws-shape {
@@ -533,6 +537,25 @@ Wrapping all content to prevent horizontal scrolling.
       width: 11.9em;
       background: url(../images/alice_walking_3.png) left top no-repeat;
       background-size: contain; }
+  #scene2_2 .act4 {
+    width: 50em;
+    height: 53em;
+    margin-left: 50em;
+    position: relative;
+    background: rgba(0, 0, 160, 0.2); }
+    #scene2_2 .act4 .alice-shape {
+      position: absolute;
+      bottom: 0;
+      height: 26.35em;
+      width: 11.9em;
+      background: url(../images/alice_walking_4.png) left top no-repeat;
+      background-size: contain; }
+    #scene2_2 .act4 .content-wrapper {
+      width: 30em;
+      height: 18em;
+      outline: 1px solid lime;
+      margin: 25em 0 0 15em;
+      -webkit-shape-inside: polygon(nonzero, 141px -1px, 394px 26px, 481px 157px, 247px 185px, 52px 279px, 23px 217px, 3px 112px, 46px 44px); }
 
 .cat-shape1 {
   -webkit-shape-outside: polygon(1.38em -0.31em, 3.75em 2.25em, 7.25em 4.31em, 7em 7.19em, 8.19em 8.5em, 11.19em 7.13em, 11.75em 8.5em, 9em 10.88em, 7.44em 12.5em, 10.69em 14.5em, 12.06em 13.56em, 17.25em 14.75em, 21.19em 14.13em, 23.31em 13.56em, 24.63em 11.25em, 25.31em 14.38em, 26.75em 14.94em, 27.38em 17.31em, 29.63em 17.5em, 27.13em 19.88em, 25.56em 23.25em, 24.38em 27.38em, 20.06em 31.5em, 18.94em 30.75em, 11.69em 33.06em, 5.63em 31.56em, 2.19em 27.56em, 0.06em 22.69em, 3.13em 15.19em, 0.44em 12.44em, 1.94em 8.63em, 3.63em 5.94em, 1.88em 3.63em);
